<resources>
    <string name="app_name">Appetcare</string>


    <!-- Strings Cadastrar Animal -->
    <string name="txt_nome_pet">Nome</string>
    <string name="txt_especie_pet">Espécie</string>
    <string name="txt_sexo_pet">Sexo</string>
    <string name="txt_raca_pet">Raça</string>
    <string name="txt_cor_pet">Cor</string>
    <string name="txt_nascimento_pet">Nascimento</string>
    <string name="txt_imagem_pet">Imagem</string>
    <string name="btn_salvar_pet">Salvar</string>
    <string name="btn_listar_pet">Listar</string>
    <string name="txt_default_nome_pet">Pet</string>
    <string name="txt_profile_meuspets">Meus Pets</string>
    <string name="txt_profile_addpets">Adicionar pet</string>
    <string name="btn_Alt_Pet">Alterar</string>
    <string name="btn_Del_Pet">Excluir</string>

    <!-- Strings Cadastrar Proprietario -->
    <string name="txt_nome_proprietario">Nome</string>
    <string name="txt_email_proprietario">Email</string>
    <string name="txt_tel_proprietario">Telefone</string>
    <string name="btn_salvar_proprietario">Salvar</string>

    <!-- Strings Perfil Proprietario -->
    <string name="txt_nome_perfil">Nome</string>
    <string name="txt_profile_perfil">Perfil</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Fechada</string>
    <string name="msg_buscar">Localizando endereço...</string>
    <string name="titulo_lista_endereco">Selecione o destino</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_animal_listagem">AnimalListagemActivity</string>
    <string name="title_activity_animal_detalhe">AnimalDetalheActivity</string>
    <string name="title_activity_animal_cadastro">AnimalCadastroActivity</string>


    <!-- animal v. -->

    <!-- Cadastro de animal -->
    <string name="animal_txt_nome">Nome</string>
    <string name="animal_txt_sexo">Sexo</string>
    <string name="animal_txt_nasc">Nascimento</string>
    <string name="animal_txt_especie">Espécie</string>
    <string name="animal_btn_salvar">Salvar</string>
    <string name="animal_cadastro_label">Cadastrar Animal</string>
    <string name="animal_rd_macho">Macho</string>
    <string name="animal_rd_femea">Fêmea</string>
    <string name="animal_rd_cachorro">Cachorro</string>
    <string name="animal_rd_gato">Gato</string>

    <!-- Listagem de animais -->
    <string name="animal_listagem_label">Meus animais</string>

    <!-- Detalhe Animal - Fragmentos -->
    <string name="frag_detalhe_info">Informações</string>
    <string name="fragment_detalhe">Detalhes</string>
    <string name="fragment_vacina">Vacina</string>
    <string name="fragment_medicacao">Medicação</string>
    <string name="fragment_vermifugacao">Vermifugação</string>

    <!-- Fragmento vacinação -->
    <string name="frag_vacina_nome">Nome da vacina</string>
    <string name="frag_vacina_data">Data da vacina</string>
    <string name="frag_vacina_btn_salvar">Salvar</string>

    <!-- Fragmento medicação -->
    <string name="frag_med_nome">Nome do medicamento</string>
    <string name="frag_med_data">Data da medicação</string>
    <string name="frag_med_btn_salvar">Salvar</string>v

    <!-- Fragmento vermifugação -->
    <string name="frag_verm_nome">Nome do vermífugo</string>
    <string name="frag_verm_data">Data da vermifugação</string>
    <string name="frag_verm_btn_salvar">Salvar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_vacina">AddVacinaActivity</string>
    <string name="title_activity_add_medicacao">AddMedicacaoActivity</string>
    <string name="title_activity_add_vermifugacao">AddVermifugacaoActivity</string>


</resources>
