<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile_proprietario"
            android:checked="false"
            android:textColor="#35355a"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/txt_profile_perfil"
            />

        <item
            android:id="@+id/profile_pets"
            android:checked="false"
            android:textColor="#35355a"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/txt_profile_meuspets" />

        <item
            android:id="@+id/profile_add_pets"
            android:checked="false"
            android:textColor="#35355a"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/txt_profile_addpets" />

        <item
            android:id="@+id/deslogar"
            android:checked="false"
            android:textColor="#35355a"
            android:icon="@drawable/ic_power"
            android:title="Sair" />

    </group>
    

</menu>