<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdescuro"
    android:adjustViewBounds="false"
    android:weightSum="1">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:id="@+id/imgTitulo"
        android:src="@drawable/titulo"
        android:layout_gravity="center"
        android:layout_weight="0.01" />


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeProprietario"
        android:drawableLeft="@drawable/login"
        android:drawablePadding="20dp"

        android:hint="@string/txt_nome_proprietario"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:password="false"
        android:backgroundTint="#f9daa8"
        android:singleLine="true"
        android:layout_alignBaseline="@+id/btnLogar"
        android:layout_alignBottom="@+id/btnLogar"
        android:layout_toRightOf="@+id/frameLayout"
        android:layout_toEndOf="@+id/frameLayout"
        android:layout_gravity="center_horizontal"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/email"
        android:drawableTint="#ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/txt_email_proprietario"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmailProprietario"
        android:backgroundTint="#f9daa8"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_below="@+id/edtNomeProprietario"
        android:layout_alignLeft="@+id/edtNomeProprietario"
        android:layout_alignStart="@+id/edtNomeProprietario"
        android:layout_alignRight="@+id/edtNomeProprietario"
        android:layout_alignEnd="@+id/edtNomeProprietario"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:textIsSelectable="true"
        android:editable="false" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/telefone"
        android:inputType="phone"
        android:drawableTint="#ffffff"
        android:drawableTintMode="add"
        android:drawablePadding="20dp"
        android:hint="@string/txt_tel_proprietario"
        android:id="@+id/edtTelProprietario"
        android:backgroundTint="#f9daa8"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_below="@+id/edtEmailProprietario"
        android:layout_alignLeft="@+id/edtEmailProprietario"
        android:layout_alignStart="@+id/edtEmailProprietario"
        android:layout_alignRight="@+id/edtEmailProprietario"
        android:layout_alignEnd="@+id/edtEmailProprietario"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Entrar"
        android:textAllCaps="false"
        android:id="@+id/btnLogar"
        android:background="@drawable/buttonlogar"
        android:shadowColor="#f9daa8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#f9daa8"
        android:textSize="25sp"
        android:elegantTextHeight="true"
        android:layout_below="@+id/imgTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />


</LinearLayout>